[package]
name = "arena-lib"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
license = "Apache-2.0 OR MIT"

authors = [
    "James Gober <me@jamesgober.com>"
]

description = "Typed memory arena and slab allocator library. Generational indices, typed arenas (one allocation per type), interned strings, and bump allocation. Zero unsafe leakage into user code."

keywords = [
    "arena",
    "allocator",
    "slab",
    "generational",
    "rust"
]

categories = [
    "memory-management",
    "data-structures"
]

documentation = "https://docs.rs/arena-lib"
repository    = "https://github.com/jamesgober/arena-lib"
homepage      = "https://github.com/jamesgober/arena-lib"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "arena_lib"
path = "src/lib.rs"

[features]
default = ["std"]
std = []

[dependencies]

[dev-dependencies]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true